@@ -1,11 +1,8 @@
 package earth.terrarium.lookinsharp.common.menu;
 
-import com.google.common.collect.Lists;
 import earth.terrarium.lookinsharp.common.registry.ModBlocks;
 import earth.terrarium.lookinsharp.common.registry.ModMenus;
 import earth.terrarium.lookinsharp.common.registry.ModRecipes;
-import net.minecraft.core.BlockPos;
-import net.minecraft.nbt.CompoundTag;
 import net.minecraft.sounds.SoundEvents;
 import net.minecraft.sounds.SoundSource;
 import net.minecraft.world.Container;
@@ -15,11 +12,14 @@ import net.minecraft.world.entity.player.Player;
 import net.minecraft.world.inventory.*;
 import net.minecraft.world.item.Item;
 import net.minecraft.world.item.ItemStack;
+import net.minecraft.world.item.crafting.RecipeHolder;
+import net.minecraft.world.item.crafting.SingleRecipeInput;
 import net.minecraft.world.level.Level;
 import org.jetbrains.annotations.NotNull;
 
 import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collectors;
 
 
 public class ForgingStationContainer extends AbstractContainerMenu {
@@ -29,17 +29,21 @@ public class ForgingStationContainer extends AbstractContainerMenu {
     private static final int INV_SLOT_END = 29;
     private static final int USE_ROW_SLOT_START = 29;
     private static final int USE_ROW_SLOT_END = 38;
+
     private final ContainerLevelAccess access;
     private final DataSlot selectedRecipeIndex = DataSlot.standalone();
     private final Level level;
-    private List<ItemStack> outputs = Lists.newArrayList();
+    private List<ItemStack> outputs = new ArrayList<>();
     private ItemStack input = ItemStack.EMPTY;
     long lastSoundTime;
+
     final Slot inputSlot;
     final Slot resultSlot;
-    Runnable slotUpdateListener = () -> {};
-    public final Container container = new SimpleContainer(1){
 
+    Runnable slotUpdateListener = () -> {
+    };
+
+    public final Container container = new SimpleContainer(1) {
         @Override
         public void setChanged() {
             super.setChanged();
@@ -47,20 +51,24 @@ public class ForgingStationContainer extends AbstractContainerMenu {
             ForgingStationContainer.this.slotUpdateListener.run();
         }
     };
+
     final ResultContainer resultContainer = new ResultContainer();
 
     public ForgingStationContainer(int i, Inventory arg) {
         this(i, arg, ContainerLevelAccess.NULL);
     }
 
-    public ForgingStationContainer(int i, Inventory arg, final ContainerLevelAccess arg2) {
+    public ForgingStationContainer(
+            int i,
+            Inventory arg,
+            final ContainerLevelAccess arg2
+    ) {
         super(ModMenus.FORGING_ANVIL.get(), i);
-        int j;
         this.access = arg2;
         this.level = arg.player.level();
-        this.inputSlot = this.addSlot(new Slot(this.container, INPUT_SLOT, 20, 33));
-        this.resultSlot = this.addSlot(new Slot(this.resultContainer, RESULT_SLOT, 143, 33){
 
+        this.inputSlot = this.addSlot(new Slot(this.container, INPUT_SLOT, 20, 33));
+        this.resultSlot = this.addSlot(new Slot(this.resultContainer, RESULT_SLOT, 143, 33) {
             @Override
             public boolean mayPlace(ItemStack arg) {
                 return false;
@@ -68,20 +76,33 @@ public class ForgingStationContainer extends AbstractContainerMenu {
 
             @Override
             public void onTake(Player arg3, ItemStack arg22) {
-                applyOldNbt(arg22);
+                applyOldComponents(arg22);
                 arg22.onCraftedBy(arg3.level(), arg3, arg22.getCount());
-                ForgingStationContainer.this.resultContainer.awardUsedRecipes(arg3, this.getRelevantItems());
+
+                ForgingStationContainer.this.resultContainer.awardUsedRecipes(
+                        arg3, this.getRelevantItems()
+                );
+
                 ItemStack itemStack = ForgingStationContainer.this.inputSlot.remove(RESULT_SLOT);
                 if (!itemStack.isEmpty()) {
                     ForgingStationContainer.this.setupResultSlot();
                 }
+
                 arg2.execute((arg, arg2) -> {
                     long l = arg.getGameTime();
                     if (ForgingStationContainer.this.lastSoundTime != l) {
-                        arg.playSound(null, (BlockPos)arg2, SoundEvents.UI_STONECUTTER_TAKE_RESULT, SoundSource.BLOCKS, 1.0f, 1.0f);
+                        arg.playSound(
+                                null,
+                                arg2,
+                                SoundEvents.UI_STONECUTTER_TAKE_RESULT,
+                                SoundSource.BLOCKS,
+                                1.0f,
+                                1.0f
+                        );
                         ForgingStationContainer.this.lastSoundTime = l;
                     }
                 });
+
                 super.onTake(arg3, arg22);
             }
 
@@ -89,14 +110,17 @@ public class ForgingStationContainer extends AbstractContainerMenu {
                 return List.of(ForgingStationContainer.this.inputSlot.getItem());
             }
         });
-        for (j = 0; j < 3; ++j) {
+
+        for (int j = 0; j < 3; ++j) {
             for (int k = 0; k < 9; ++k) {
                 this.addSlot(new Slot(arg, k + j * 9 + 9, 8 + k * 18, 84 + j * 18));
             }
         }
-        for (j = 0; j < 9; ++j) {
+
+        for (int j = 0; j < 9; ++j) {
             this.addSlot(new Slot(arg, j, 8 + j * 18, 142));
         }
+
         this.addDataSlot(this.selectedRecipeIndex);
     }
 
@@ -113,7 +137,7 @@ public class ForgingStationContainer extends AbstractContainerMenu {
     }
 
     public boolean hasInputItem() {
-        return this.inputSlot.hasItem() && this.outputs.size() > 0;
+        return this.inputSlot.hasItem() && !this.outputs.isEmpty();
     }
 
     @Override
@@ -147,14 +171,22 @@ public class ForgingStationContainer extends AbstractContainerMenu {
         this.outputs.clear();
         this.selectedRecipeIndex.set(-1);
         this.resultSlot.set(ItemStack.EMPTY);
+
         if (!arg2.isEmpty()) {
-            this.outputs = new ArrayList<>(this.level.getRecipeManager().getRecipesFor(ModRecipes.FORGING.get(), arg, this.level).stream().flatMap(forgingRecipe -> forgingRecipe.results().stream()).toList());
+            var input = new SingleRecipeInput(arg2);
+            this.outputs = this.level.getRecipeManager()
+                    .getRecipesFor(ModRecipes.FORGING.get(), input, this.level)
+                    .stream()
+                    .map(RecipeHolder::value)
+                    .flatMap(recipe -> recipe.getResults().stream())
+                    .collect(Collectors.toCollection(ArrayList::new));
         }
     }
 
     void setupResultSlot() {
         if (!this.outputs.isEmpty() && this.isValidRecipeIndex(this.selectedRecipeIndex.get())) {
             ItemStack itemStack = this.outputs.get(this.selectedRecipeIndex.get()).copy();
+
             if (itemStack.isItemEnabled(this.level.enabledFeatures())) {
                 this.resultSlot.set(itemStack);
             } else {
@@ -184,30 +216,47 @@ public class ForgingStationContainer extends AbstractContainerMenu {
     public @NotNull ItemStack quickMoveStack(Player arg, int i) {
         ItemStack itemStack = ItemStack.EMPTY;
         Slot slot = this.slots.get(i);
+
         if (slot.hasItem()) {
             ItemStack itemStack2 = slot.getItem();
             Item item = itemStack2.getItem();
             itemStack = itemStack2.copy();
+
             if (i == 1) {
-                applyOldNbt(itemStack2);
+                applyOldComponents(itemStack2);
                 item.onCraftedBy(itemStack2, arg.level(), arg);
                 if (!this.moveItemStackTo(itemStack2, INV_SLOT_START, USE_ROW_SLOT_END, true)) {
                     return ItemStack.EMPTY;
                 }
                 slot.onQuickCraft(itemStack2, itemStack);
-            } else if (i == 0 ? !this.moveItemStackTo(itemStack2, INV_SLOT_START, USE_ROW_SLOT_END, false) : (this.level.getRecipeManager().getRecipeFor(ModRecipes.FORGING.get(), new SimpleContainer(itemStack2), this.level).isPresent() ? !this.moveItemStackTo(itemStack2, 0, 1, false) : (i >= INV_SLOT_START && i < INV_SLOT_END ? !this.moveItemStackTo(itemStack2, 29, 38, false) : i >= USE_ROW_SLOT_START && i < USE_ROW_SLOT_END && !this.moveItemStackTo(itemStack2, 2, 29, false)))) {
+            } else if (i == 0
+                    ? !this.moveItemStackTo(itemStack2, INV_SLOT_START, USE_ROW_SLOT_END, false)
+                    : (this.level.getRecipeManager()
+                    .getRecipeFor(ModRecipes.FORGING.get(),
+                            new SingleRecipeInput(itemStack2),
+                            this.level)
+                    .isPresent()
+                    ? !this.moveItemStackTo(itemStack2, 0, 1, false)
+                    : (i >= INV_SLOT_START && i < INV_SLOT_END
+                    ? !this.moveItemStackTo(itemStack2, 29, 38, false)
+                    : i >= USE_ROW_SLOT_START && i < USE_ROW_SLOT_END
+                    && !this.moveItemStackTo(itemStack2, 2, 29, false)))) {
                 return ItemStack.EMPTY;
             }
+
             if (itemStack2.isEmpty()) {
                 slot.setByPlayer(ItemStack.EMPTY);
             }
+
             slot.setChanged();
             if (itemStack2.getCount() == itemStack.getCount()) {
                 return ItemStack.EMPTY;
             }
+
             slot.onTake(arg, itemStack2);
             this.broadcastChanges();
         }
+
         return itemStack;
     }
 
@@ -218,11 +267,10 @@ public class ForgingStationContainer extends AbstractContainerMenu {
         this.access.execute((arg2, arg3) -> this.clearContainer(arg, this.container));
     }
 
-    public void applyOldNbt(ItemStack result) {
-        CompoundTag compoundtag = this.slots.get(0).getItem().getTag();
-        if (compoundtag != null) {
-            result.setTag(compoundtag.copy());
+    public void applyOldComponents(ItemStack result) {
+        ItemStack sourceItem = this.slots.getFirst().getItem();
+        if (!sourceItem.isEmpty()) {
+            result.applyComponents(sourceItem.getComponents());
         }
     }
 }
-
